--- a/client/package.json
+++ b/client/package.json
@@ -18,3 +18,10 @@
     "vite": "^5.4.10"
   }
 }
+{
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  }
+}
